--- a/app/views/finances/edit.html.erb
+++ b/app/views/finances/edit.html.erb
@@ -1,10 +1,5 @@
-<header>
-  <title>Edit Finance Request</title>
-</header>
-
 <br>
-
-<h1>Editing Finance Request</h1>
+<h1>Editing finance</h1>
 
 <%= render "form", finance: @finance %>
 
