--- a/app/views/officer_entries/edit.html.erb
+++ b/app/views/officer_entries/edit.html.erb
@@ -1,8 +1,4 @@
-<header>
-  <title>Edit Officer Entry</title>
-</header>
-
-<h1>Editing Officer Entry</h1>
+<h1>Editing officer entry</h1>
 
 <%= render "form", officer_entry: @officer_entry %>
 
