--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -1,8 +1,4 @@
-<header>
-  <title> New Attendance </title>
-</header>
-
-<h1>New Attendance</h1>
+<h1>New attendance</h1>
 
 <%= render "form", attendance: @attendance %>
 
