--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,17 +1,17 @@
-<header>
-  <title> New Event </title>
-</header>
+
 
 <%= render "form", event: @event %>
 
 <br>
 
 <div>
-  <%= link_to events_path do %>
-    <button type="button" style= "width: 5%; border: none; background: none; position: fixed; top: 25px; left: 25px;"
-    onmouseover="this.style.transform='scale(1.1)';"
-    onmouseout="this.style.transform='scale(1)';">
-      <%= image_tag "back_arrow_icon.png", alt: "Back to Events Dashboard", style: "width: 100%; height: auto;" %>
-    </button>
-  <% end %>
+<div>
+<%= link_to events_path do %>
+  <button type="button" style= "width: 5%; border: none; background: none; position: fixed; top: 25px; left: 25px;"
+  onmouseover="this.style.transform='scale(1.1)';"
+  onmouseout="this.style.transform='scale(1)';">
+    <%= image_tag "back_arrow_icon.png", alt: "Back to Events Dashboard", style: "width: 100%; height: auto;" %>
+  </button>
+<% end %>
+</div>
 </div>
