--- a/app/views/finances/_finance.html.erb
+++ b/app/views/finances/_finance.html.erb
@@ -1,26 +1,133 @@
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin: 50px;
-  }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin: 50px;
+      }
+      .imsa-logo {
+        position: fixed;
+        top: 25px;
+        left: 50px;
+        width: 100px;
+      }
+      .profile-icon {
+        position: fixed;
+        top: 25px;
+        right: 50px; 
+        width: 100px; 
+        cursor: pointer;
+      }
 
-  h2 {
-    color: #333;
-  }
+      h2 {
+        color: #333;
+      }
 
-  p {
-    color: #666;åå
-  }
+      p {
+        color: #666;åå
+      }
 
-  a {
-    color: #007bff;
-    text-decoration: none;
-    margin: 5px;
-  }
-</style>
+      a {
+        color: #007bff;
+        text-decoration: none;
+        margin: 5px;
+      }
+
+      .admin-links,
+      .user-links {
+        display: block; 
+      }
+
+      .user-links,
+      .admin-info {
+        display: block; 
+      }
+
+      .toggle-links-button {
+        padding: 10px;
+        margin: 10px;
+        cursor: pointer;
+      }
+
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        display: inline;
+        margin-right: 10px;
+      }
+
+      nav {
+        background-color: #007bff;
+        padding: 5px; 
+      }
+
+      nav a {
+        color: #fff;
+      }
+
+      .content {
+        margin-top: 60px; 
+      }
+
+      .navbar {
+        background-color: #007bff;
+        padding: 5px;
+        width: 55%;
+        margin: auto; 
+        margin-top: 5vh;
+        display: flex;
+        align-items: center; 
+        justify-content: space-evenly;
+        z-index: 1000;
+      }
+
+      .navbar a {
+        color: #fff;
+      }
+
+      .navbar .active a {
+        background-color: #C0C0C0; 
+        color: #007bff; 
+        border-radius: 5px; 
+      }
+
+      .navbar-nav {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+      }
+
+      .member-navbar {
+        width: 30%;
+      }
+      @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
+
+
+      .side-header {
+        transform: rotate(270deg);
+        position: fixed;
+        top: 75%; 
+        left: 11%; 
+        transform-origin: bottom left; 
+        letter-spacing: 0.8em; 
+        font-size: 100px; 
+        font-family: 'Mustopha'; 
+      }
+
+
+    </style>
+  </head>
   
-<div id="<%= dom_id finance %>">
+  <div id="<%= dom_id finance %>">
   <p>
     <strong>Email:</strong>
     <%= finance.email %>
@@ -45,4 +152,5 @@
     <strong>Status:</strong>
     <%= finance.status %>
   </p>
+
 </div>
