--- a/app/views/finances/new.html.erb
+++ b/app/views/finances/new.html.erb
@@ -1,10 +1,5 @@
-<header>
-  <title>New Finance Request</title>
-</header>
-
 <br>
-
-<h1>New Finance Request</h1>
+<h1>New finance</h1>
 
 <%= render "form", finance: @finance %>
 
