--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,213 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Members</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 50px;
-    }
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin: 50px;
+      }
+      .imsa-logo {
+        position: fixed;
+        top: 25px;
+        left: 50px;
+        width: 100px;
+      }
+      .profile-icon {
+        position: fixed;
+        top: 25px;
+        right: 50px; 
+        width: 100px; 
+        cursor: pointer;
+      }
 
-    h3 {
-      color: #333;
-      font-size: 5vw;
-    }
+      h2 {
+        color: #333;
+      }
 
-    h2 {
-      color: #333;
-      margin-top: 1%;
-      left: 41.25%;
-      font-size: 2vw;
-    }
+      p {
+        color: #666;åå
+      }
 
-    h1 {
-      margin-top: 1%;
-      font-size: 3vw;
-    }
+      a {
+        color: #007bff;
+        text-decoration: none;
+        margin: 5px;
+      }
 
-    .imsa-logo {
-      position: fixed;
-      top: 4%;
-      left: 3%;
-      width: 7.5%;
-    }
+      .admin-links,
+      .user-links {
+        display: block; 
+      }
 
-    .profile-icon {
-      position: fixed;
-      top: 4%;
-      right: 3%; 
-      width: 7.5%; 
-      cursor: pointer;
-    }
+      .user-links,
+      .admin-info {
+        display: block; 
+      }
 
-    h2 {
-      color: #333;
-    }
+      .toggle-links-button {
+        padding: 10px;
+        margin: 10px;
+        cursor: pointer;
+      }
 
-    p {
-      color: #666;åå
-    }
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
 
-    a {
-      color: #007bff;
-      text-decoration: none;
-      margin: 5px;
-    }
+      li {
+        display: inline;
+        margin-right: 10px;
+      }
 
-    .admin-links,
-    .user-links {
-      display: block; 
-    }
-
-    .user-links,
-    .admin-info {
-      display: block; 
-    }
-
-    .toggle-links-button {
-      padding: 10px;
-      margin: 10px;
-      cursor: pointer;
-    }
-
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    li {
-      display: inline;
-      margin-right: 10px;
-    }
-
-    nav {
+      nav {
       background-color: #007bff;
       padding: 5px; 
-    }
-
-    nav a {
-      color: #fff;
-    }
-
-    .content {
-      margin-top: 60px; 
-    }
-
-    .navbar {
-      background-color: #007bff;
-      padding: 5px;
-      width: 55%;
-      margin: auto; 
-      margin-top: 5vh;
-      display: flex;
-      align-items: center; 
-      justify-content: space-evenly;
-      z-index: 1000;
-    }
-
-    .navbar a {
-      color: #fff;
-    }
-
-    .navbar .active a {
-      background-color: #C0C0C0; 
-      color: #007bff; 
-      border-radius: 5px; 
-    }
-
-    .navbar-nav {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-    }
-
-    .member-navbar {
-        width: 30%;
-    }
-    @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
-
-    table, thead, tbody, tr, td {
-      font-family: Arial, sans-serif;
-      margin-left: auto;
-      margin-right: auto;
-      border: 1px solid;
-    }
-
-    table {
-      width: 75%;
-    }
-
-    th, td {
-      padding: 5px;
-    }
-
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-
-    th {
-      background-color: #04AA6D;
-      color: white;
-    }
-
-    <% if current_member&.position == 'Member'%>
-      tr:nth-child(n+11){
-        display:none;
       }
-    <% end %>
 
-    .delete-confirmation-popup {
-      display: none;
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-      border: 1px solid black;
-      z-index: 1000;
-    }
+      nav a {
+        color: #fff;
+      }
+
+      .navbar {
+        background-color: #007bff;
+        padding: 5px;
+        width: 55%;
+        margin: auto; 
+        margin-top: 5vh;
+      }
+
+      .navbar a {
+        color: #fff;
+      }
+
+      .header {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        background-color: #007bff;
+        padding: 5px; 
+        color: #fff;
+      }
+
+      .miniheader{
+        margin-left: -60%; 
+      }
+
+      .miniheader1{
+        margin-left: -53%; 
+      }
+
+      .content {
+        margin-top: 60px; 
+      }
+
+      .navbar .active a {
+        background-color: #C0C0C0; 
+        color: #007bff; 
+        border-radius: 5px; 
+      }
+
+      .navbar-nav {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+      }
+
+      .member-navbar {
+        width: 30%;
+      }
+      @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
 
 
-    .confirm-delete-btn, .cancel-delete-btn {
-      margin-right: 5px;
-      border: none;
-      padding: 5px 10px;
-      border-radius: 3px;
-      cursor: pointer;
-      font-size: 0.9rem;
-    }
+      .side-header {
+        transform: rotate(270deg);
+        position: fixed;
+        top: 75%; 
+        left: 11%; 
+        transform-origin: bottom left; 
+        letter-spacing: 0.8em; 
+        font-size: 100px; 
+        font-family: 'Mustopha'; 
+      }
 
-    .confirm-delete-btn {
-      background-color: #d9534f; /* Red */
-      color: white;
-    }
+      table, thead, tbody, tr, td {
+        font-family: Arial, sans-serif;
+        margin-left: auto;
+        margin-right: auto;
+        border: 1px solid;
+      }
 
-    .cancel-delete-btn {
-      background-color: #f0ad4e; /* Yellow */
-      color: white;
-    }
+      table {
+        width: 75%;
+      }
 
-    .red-dot {
-      width: 1.75vw;
-      height: 3.5vh;
+      th, td {
+        padding: 5px;
+      }
+
+      tr:nth-child(even) {background-color: #f2f2f2;}
+
+      th {
+        background-color: #04AA6D;
+        color: white;
+      }
+      <% if current_member&.position == 'Member'%>
+        tr:nth-child(n+11){
+          display:none;
+        }
+      <% end %>
+
+    </style>
+  </head>
+
+</style>
+
+<style>
+  .delete-confirmation-popup {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+    border: 1px solid black;
+    z-index: 1000;
+  }
+
+
+  .confirm-delete-btn, .cancel-delete-btn {
+    margin-right: 5px;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 0.9rem;
+  }
+
+  .confirm-delete-btn {
+    background-color: #d9534f; /* Red */
+    color: white;
+  }
+
+  .cancel-delete-btn {
+    background-color: #f0ad4e; /* Yellow */
+    color: white;
+  }
+
+  .red-dot {
+      width: 22px;
+      height: 22px;
       background-color: red;
       border-radius: 100%;
       position: absolute;
-      top: 24.5%;
-      left: 73.5%;
+      top: 175px;
+      left: 1425px;
       z-index: 1000000;
-      font-size: 1vw;
     }
-  </style>
-</header>
+</style>
 
 <p style="color: green"><%= notice %></p>
 
@@ -227,10 +234,8 @@
     <% if admin_signed_in? %>
       <% current_member = Member.find_by(email: current_admin.email) %>
 
-      <h1>Members</h1>
-
       <% if current_member&.position == 'President'%>
-        
+        <h2>Members Table</h2>
         <div class="links">
           <div class="admin-links">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -250,6 +255,9 @@
                   </li>
                   <li class="nav-item">
                     <%= link_to 'Events', events_path, class: 'nav-link' %>
+                  </li>
+                  <li class="nav-item">
+                    <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item">
                     <%= link_to 'Finances', finances_path, class: 'nav-link' %>
@@ -260,6 +268,7 @@
           </div>
         </div>
       <% elsif current_member&.position != 'President' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+        <h2>Officer Dashboard</h2>
         <div class="links">
           <div class="admin-links">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -282,6 +291,9 @@
                     <%= link_to 'Events', events_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item">
+                    <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
+                  </li>
+                  <li class="nav-item">
                     <%= link_to 'Finances', finances_path, class: 'nav-link' %>
                   </li>
                 </ul>
@@ -290,10 +302,12 @@
           </div>
         </div>
       <% elsif current_member&.position == 'Pending' %>
+        <h2>Pending Member Dashboard</h2>
           <h2>Your membership is pending...</h2>
           <h2>You won't be approved for an account unless you're a paid member of TAMU IMSA.</h2>
       <% else %>
         <div class="admin-info">
+          <h2>Member Dashboard</h2>
           <div class="links">
             <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar">
               <ul class="navbar-nav">
@@ -313,10 +327,8 @@
       <% end %>
     <% end %>
 
-  <%= link_to root_path do %>
-    <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
-  <% end %>
-
+  <h1 class="side-header">IMSA</h1>
+  <%= image_tag 'imsa_logo.png', alt: 'IMSA Logo', class: 'imsa-logo' %>
   <% if current_member&.position != 'Pending' %>
     <a href="<%= profile_path %>">
       <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
@@ -348,78 +360,76 @@
             
             <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
               <td><%= link_to 'Show', member %></td>
-            <% end %>
-            
-            <% if current_member&.position == 'President' %>
               <td><%= link_to 'Edit', edit_member_path(member) %></td>
             
-              <td>
-                <%= form_with url: member_path(member), method: :delete, class: 'delete-member-form', local: true do %>
-                  <%= submit_tag 'Delete', class: 'link-like-button' %>
-                <% end %>
-              </td>
+            <td>
+              <%= form_with url: member_path(member), method: :delete, class: 'delete-member-form', local: true do %>
+                <%= submit_tag 'Delete', class: 'link-like-button' %>
+              <% end %>
+            </td>
             <% end %>
           </tr>
         <% end %>
       </tbody>
     </table>
       <% if @current_member&.position != 'Member' && @current_member&.position != 'Pending' %>
-      <%= link_to 'New Member', new_member_path %>
+      <h3><%= link_to 'New Member', new_member_path %><h3>
       <%end%>
   </div>
 </body>
 
 
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
-    var deleteForms = document.querySelectorAll('.delete-member-form');
-    var confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
-    var currentForm;
+document.addEventListener("DOMContentLoaded", function() {
+  var deleteForms = document.querySelectorAll('.delete-member-form');
+  var confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
+  var currentForm;
 
-    deleteForms.forEach(function(form) {
-      form.addEventListener('submit', function(e) {
-        e.preventDefault();
-        currentForm = form; // Save the current form
-        var memberName = e.target.closest('tr').querySelector('td:nth-child(2)').textContent;
-        document.getElementById('memberNameToDelete').textContent = memberName;
-        document.getElementById('deleteConfirmationPopup').style.display = 'block';
-      });
-    });
-
-    confirmDeleteBtn.addEventListener('click', function() {
-      currentForm.submit(); // Submit the saved form
+  deleteForms.forEach(function(form) {
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      currentForm = form; // Save the current form
+      var memberName = e.target.closest('tr').querySelector('td:nth-child(2)').textContent;
+      document.getElementById('memberNameToDelete').textContent = memberName;
+      document.getElementById('deleteConfirmationPopup').style.display = 'block';
     });
   });
 
-  function cancelDelete() {
-    document.getElementById('deleteConfirmationPopup').style.display = 'none';
-  }
+  confirmDeleteBtn.addEventListener('click', function() {
+    currentForm.submit(); // Submit the saved form
+  });
+});
+
+function cancelDelete() {
+  document.getElementById('deleteConfirmationPopup').style.display = 'none';
+}
 </script>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    var adminLinks = document.querySelector('.links');
-    var userLinks = document.querySelector('.user-links');
-    var adminInfo = document.querySelector('.admin-info');
-    var toggleButtons = document.querySelectorAll('.toggle-links-button');
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        var adminLinks = document.querySelector('.links');
+        var userLinks = document.querySelector('.user-links');
+        var adminInfo = document.querySelector('.admin-info');
+        var toggleButtons = document.querySelectorAll('.toggle-links-button');
 
-    toggleButtons.forEach(function(button) {
-      button.addEventListener('click', function() {
-        console.log(adminInfo.style.display); 
-        adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
-        if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
-          adminInfo.style.display = 'block'; 
-        } else {
-          adminInfo.style.display = "none"; 
-        }
-      });
-    });
-  </script>
-</script>
+        toggleButtons.forEach(function(button) {
+          button.addEventListener('click', function() {
+            console.log(adminInfo.style.display); 
+            adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
+            if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
+              adminInfo.style.display = 'block'; 
+            } else {
+              adminInfo.style.display = "none"; 
+            }
+          });
+        });
+      </script>
+    </script>
+  </body>
 </html>
 
 
