--- a/app/views/officer_entries/new.html.erb
+++ b/app/views/officer_entries/new.html.erb
@@ -1,13 +1,9 @@
-<header>
-  <title>New Officer Entry</title>
-</header?  
-
-<h1>New Officer Entry</h1>
+<h1>New officer entry</h1>
 
 <%= render "form", officer_entry: @officer_entry %>
 
 <br>
 
 <div>
-  <%= link_to "Back to officer leaderboard", officer_index_members_path %>
+  <%= link_to "Back to officer entries", officer_entries_path %>
 </div>
