--- a/app/views/members/officer_show.html.erb
+++ b/app/views/members/officer_show.html.erb
@@ -41,10 +41,12 @@
     margin: auto;
     text-align: center;
     width: 50%;
+    margin-left: 26%;
   }
 </style>
 
 <h2>Officer Points for <%= @member.full_name %> </h2>
+<br>
 <table>
   <thead>
     <th>Points</th>
