--- a/app/views/events/attend.html.erb
+++ b/app/views/events/attend.html.erb
@@ -1,9 +1,43 @@
 <!-- app/views/events/attend.html.erb -->
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 50px;
+  }
+
+  h3 {
+    color: #333;
+    font-size: 5vw;
+  }
+
+  h2 {
+    color: #333;
+    margin-top: 1%;
+    left: 41.25%;
+    font-size: 2vw;
+  }
+
+  h1 {
+    margin-top: 1%;
+    font-size: 3vw;
+  }
+</style>
+    
 <header>
   <title>Attend Event</title>
 </header>
 
+<nav class="navbar navbar-expand-lg navbar-dark" style="text-align: left;">
+  <a class="navbar-brand" href="<%= root_path %>" style="color: black;">
+  <img src="<%= asset_path('back_arrow_icon.png') %>" alt="Arrow Icon" class="mr-2" style="width: 5%; height: auto; cursor: pointer;" onclick="javascript:history.back(); return false;">
+  </a>
+</nav>
+
+<h1> Attend Event </h1>
+
 <h2>Enter Event Password</h2>
+<br>
 <%= form_with url: register_attendance_event_path(@event), method: :post do |f| %>
   <%= f.label :event_password, "Password" %>
   <%= f.text_field :event_password %>
