--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -240,7 +240,7 @@
                 <%= link_to 'Events', events_path, class: 'nav-link' %>
               </li>
               <li class="nav-item">
-                <%= link_to 'Leaderboard', events_path, class: 'nav-link' %>
+                <%= link_to 'Leaderboard', members_path, class: 'nav-link' %>
               </li>
             </ul>
           </nav>
