--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -11,7 +11,6 @@
   <style>
     body {
       background-color: #f4f4f4;
-      padding-top: 50px; /* Adjust for fixed navbar */
     }
 
     .profile-container {
@@ -38,11 +37,16 @@
     }
   </style>
 </head>
+
 <body>
   <!-- Bootstrap Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="<%= root_path %>">Dashboard</a>
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <a class="navbar-brand" style="color: black;">
+      <img src="<%= asset_path('back_arrow_icon.png') %>" alt="Arrow Icon" class="mr-2" style="width: 5%; height: auto; cursor: pointer;" onclick="javascript:history.back(); return false;">
+    </a>
   </nav>
+
+  <h1> Profile </h1>
 
   <div class="container">
     <div class="profile-container">
