Various bugfixes to site nav and views

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -205,6 +205,7 @@
       left: 73.5%;
       z-index: 1000000;
       font-size: 1vw;
+      color: white;
     }
   </style>
 </header>
@@ -220,7 +221,7 @@
   <body>
   <% if current_member&.position != 'Member' %>
     <% if Finance.where(status: 0).count > 0 %>
-        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
+        <div class="red-dot"><%= Finance.where(status: 0).count %></div>
     <% end %>
   <% end %>
 
