--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -179,6 +179,7 @@
       left: 73.5%;
       z-index: 1000000;
       font-size: 1vw;
+      color: white;
     }
   </style>
 </head>
@@ -186,7 +187,7 @@
 
   <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
     <% if Finance.where(status: 0).count > 0 %>
-        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
+        <div class="red-dot"><%= Finance.where(status: 0).count %></div>
     <% end %>
   <% end %>
 
