--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -209,6 +209,7 @@
       left: 73.5%;
       z-index: 1000000;
       font-size: 1vw;
+      color: white;
     }
 
     .delete-confirmation-popup {
@@ -249,7 +250,7 @@
 
 <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
   <% if Finance.where(status: 0).count >= 1 %>
-      <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
+      <div class="red-dot"><%= Finance.where(status: 0).count %></div>
   <% end %>
 <% end %>
 
