--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -169,6 +169,7 @@
       left: 73.5%;
       z-index: 1000000;
       font-size: 1vw;
+      color: white;
     }
 
     .link-like-button {
@@ -190,7 +191,7 @@
 
 <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
   <% if Finance.where(status: 0).count > 0 %>
-    <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
+    <div class="red-dot"><%= Finance.where(status: 0).count %></div>
   <% end %>
 <% end %> 
 
