Revert "Final UAT merge"

--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -187,8 +187,6 @@
       top: 190px;
       left: 1430px;
       z-index: 1000000;
-      font-size: 1vw;
-      color: white;
     }
 
     .red-dot2 {
@@ -205,10 +203,15 @@
   </style>
 </head>
 <body>
+<% if current_member&.position != 'Member' %>
+  <% if Finance.where(status: 0).count == 1 %>
+      <div class="red-dot1"><%= Finance.where(status: 0).count %>!</div>
+  <% end %>
+<% end %>
 
-<% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-  <% if Finance.where(status: 0).count >= 1 %>
-      <div class="red-dot"><%= Finance.where(status: 0).count %></div>
+<% if current_member&.position != 'Member' %>
+  <% if Finance.where(status: 0).count > 1 %>
+      <div class="red-dot2"><%= Finance.where(status: 0).count %>!</div>
   <% end %>
 <% end %>
 
