--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -198,8 +198,6 @@
       top: 175px;
       left: 1425px;
       z-index: 1000000;
-      font-size: 1vw;
-      color: white;
     }
 </style>
 
@@ -214,7 +212,7 @@
   <body>
   <% if current_member&.position != 'Member' %>
     <% if Finance.where(status: 0).count > 0 %>
-        <div class="red-dot"><%= Finance.where(status: 0).count %></div>
+        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
     <% end %>
   <% end %>
 
@@ -305,7 +303,7 @@
                   <%= link_to 'Events', events_path, class: 'nav-link' %>
                 </li>
                 <li class="nav-item active">
-                  <%= link_to 'Leaderboard', members_path, class: 'nav-link' %>
+                  <%= link_to 'Leaderboard', events_path, class: 'nav-link' %>
                 </li>
               </ul>
             </nav>
@@ -347,35 +345,13 @@
             
             <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
               <td><%= link_to 'Show', member %></td>
-              <% if member.position == 'Member' || member.position == 'Pending' %>
-                <td><%= link_to 'Edit', edit_member_path(member) %></td>
-              
-                <td>
-                  <%= form_with url: member_path(member), method: :delete, class: 'delete-member-form', local: true do %>
-                    <%= submit_tag 'Delete', class: 'link-like-button' %>
-                  <% end %>
-                </td>
-              <% elsif member.position != 'Member' && member.position != 'Pending' && member.position != "President" %>
-                <% if current_member&.position == 'President' %>
-                  <td><%= link_to 'Edit', edit_member_path(member) %></td>
-                
-                  <td>
-                    <%= form_with url: member_path(member), method: :delete, class: 'delete-member-form', local: true do %>
-                      <%= submit_tag 'Delete', class: 'link-like-button' %>
-                    <% end %>
-                  </td>
-                <% end %>
-              <% else %>
-                <% if Member.where(position: 'President').count > 1 && current_member&.position == 'President'%>
-                  <td><%= link_to 'Edit', edit_member_path(member) %></td>
-                  
-                  <td>
-                    <%= form_with url: member_path(member), method: :delete, class: 'delete-member-form', local: true do %>
-                      <%= submit_tag 'Delete', class: 'link-like-button' %>
-                    <% end %>
-                  </td>
-                <% end %>
+              <td><%= link_to 'Edit', edit_member_path(member) %></td>
+            
+            <td>
+              <%= form_with url: member_path(member), method: :delete, class: 'delete-member-form', local: true do %>
+                <%= submit_tag 'Delete', class: 'link-like-button' %>
               <% end %>
+            </td>
             <% end %>
           </tr>
         <% end %>
