--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -172,7 +172,6 @@
       left: 1425px;
       z-index: 1000000;
       font-size: 1vw;
-      color: white;
     }
 
     .link-like-button {
@@ -196,7 +195,7 @@
 
 <% if current_member&.position != 'Member' %>
   <% if Finance.where(status: 0).count > 0 %>
-    <div class="red-dot"><%= Finance.where(status: 0).count %></div>
+    <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
   <% end %>
 <% end %> 
 
