--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -135,7 +135,6 @@
       left: 1425px;
       z-index: 1000000;
       font-size: 1vw;
-      color: white;
     }
 
     </style>
@@ -144,7 +143,7 @@
   <body>
   <% if current_member&.position != 'Member' %>
     <% if Finance.where(status: 0).count > 0 %>
-        <div class="red-dot"><%= Finance.where(status: 0).count %></div>
+        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
     <% end %>
   <% end %>
     <% if admin_signed_in? %>
