--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -199,7 +199,6 @@
       left: 1410px;
       z-index: 1000000;
       font-size: 1vw;
-      color: white;
     }
 
   </style>
@@ -208,7 +207,7 @@
 
   <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
     <% if Finance.where(status: 0).count > 0 %>
-        <div class="red-dot"><%= Finance.where(status: 0).count %></div>
+        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
     <% end %>
   <% end %>
 
