--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -199,7 +199,6 @@
       left: 1425px;
       z-index: 1000000;
       font-size: 1vw;
-      color: white;
     }
 </style>
 
@@ -214,7 +213,7 @@
   <body>
   <% if current_member&.position != 'Member' %>
     <% if Finance.where(status: 0).count > 0 %>
-        <div class="red-dot"><%= Finance.where(status: 0).count %></div>
+        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
     <% end %>
   <% end %>
 
