--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -42,16 +42,15 @@
   <!-- Bootstrap Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" style="color: black;">
-      <%= link_to root_url do %>
-        <%= image_tag "back_arrow_icon.png", :width => "8%"%>
-      <% end %>
+      <img src="<%= asset_path('back_arrow_icon.png') %>" alt="Arrow Icon" class="mr-2" style="width: 5%; height: auto; cursor: pointer;" onclick="javascript:history.back(); return false;">
     </a>
   </nav>
 
-  <h1> <%= @current_member.full_name%>'s Profile </h1>
+  <h1> Profile </h1>
 
   <div class="container">
     <div class="profile-container">
+      <h1>Profile Information</h1>
       <p><strong>Name:</strong> <%= @current_member.full_name %></p>
       <p><strong>Email:</strong> <%= @current_member.email %></p>
       <p><strong>Phone Number:</strong> <%= @current_member.phone_number %> <a href="<%= edit_phone_number_member_path(@current_member) %>">Edit</a></p>
